add email notification for wget

--- a/notebooks/20180219_download_and_backup.ipynb
+++ b/notebooks/20180219_download_and_backup.ipynb
@@ -144,6 +144,16 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "%%bash\n",
+    "cat ~/.default_subject.mail| msmtp \"$EMAIL\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
