add note about failed cp

--- a/notebooks/20180219_download_and_backup.ipynb
+++ b/notebooks/20180219_download_and_backup.ipynb
@@ -372,17 +372,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Forgot slash at end of path, before *."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "%%bash\n",
-    "cp /home/sam/uw_drive/coral_rnaseq_2017/ucr_seq_output/illumina.bioinfo.ucr.edu/illumina_runs/web/ae55dd77f1828d82016e4e2ca1d93c6b70d261f3*.gz \\\n",
+    "time cp /home/sam/uw_drive/coral_rnaseq_2017/ucr_seq_output/illumina.bioinfo.ucr.edu/illumina_runs/web/ae55dd77f1828d82016e4e2ca1d93c6b70d261f3/*.gz \\\n",
     "/media/sam/data/coral_RNAseq_fastq\n",
     "ls -lh /media/sam/data/coral_RNAseq_fastq\n",
     "cat ~/.default_subject.mail| msmtp \"$EMAIL\""
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
