download/cp complete

--- a/notebooks/20180219_download_and_backup.ipynb
+++ b/notebooks/20180219_download_and_backup.ipynb
@@ -380,14 +380,198 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Process is interrupted.\n"
+     ]
+    }
+   ],
    "source": [
     "%%bash\n",
     "time cp /home/sam/uw_drive/coral_rnaseq_2017/ucr_seq_output/illumina.bioinfo.ucr.edu/illumina_runs/web/ae55dd77f1828d82016e4e2ca1d93c6b70d261f3/*.gz \\\n",
     "/media/sam/data/coral_RNAseq_fastq\n",
     "ls -lh /media/sam/data/coral_RNAseq_fastq\n",
+    "cat ~/.default_subject.mail| msmtp \"$EMAIL\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Hmmm, just checked on this on 20180305 and it seems that the cp process hung somewhere. Here's what was transferred."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "total 17G\n",
+      "-rwxrwxrwx 1 sam sam 1.3G Feb 26 15:24 4R041-L6-P01-AGTCAA-READ1-Sequences.txt.gz\n",
+      "-rwxrwxrwx 1 sam sam 1.4G Feb 26 15:26 4R041-L6-P01-AGTCAA-READ2-Sequences.txt.gz\n",
+      "-rwxrwxrwx 1 sam sam 1.7G Feb 26 15:27 4R041-L6-P02-CTTGTA-READ1-Sequences.txt.gz\n",
+      "-rwxrwxrwx 1 sam sam 1.9G Feb 26 15:28 4R041-L6-P02-CTTGTA-READ2-Sequences.txt.gz\n",
+      "-rwxrwxrwx 1 sam sam 1.2G Feb 26 15:29 4R041-L6-P03-GTTTCG-READ1-Sequences.txt.gz\n",
+      "-rwxrwxrwx 1 sam sam 1.4G Feb 26 15:30 4R041-L6-P03-GTTTCG-READ2-Sequences.txt.gz\n",
+      "-rwxrwxrwx 1 sam sam 1.3G Feb 26 15:31 4R041-L6-P04-ATCACG-READ1-Sequences.txt.gz\n",
+      "-rwxrwxrwx 1 sam sam 1.4G Feb 26 15:32 4R041-L6-P04-ATCACG-READ2-Sequences.txt.gz\n",
+      "-rwxrwxrwx 1 sam sam 1.7G Feb 26 15:33 4R041-L6-P05-TAGCTT-READ1-Sequences.txt.gz\n",
+      "-rwxrwxrwx 1 sam sam 2.0G Feb 26 15:34 4R041-L6-P05-TAGCTT-READ2-Sequences.txt.gz\n",
+      "-rwxrwxrwx 1 sam sam 2.0G Feb 26 15:35 4R041-L6-P06-AGTTCC-READ1-Sequences.txt.gz\n",
+      "-rwxrwxrwx 1 sam sam    0 Feb 26 15:35 4R041-L6-P06-AGTTCC-READ2-Sequences.txt.gz\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "ls -ltrh /media/sam/data/coral_RNAseq_fastq/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Going to restart and see if I can get these copied!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tue Mar  6 15:38:00 PST 2018\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "date"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "cp: target '/mnt/data/sam/coral_RNAseq_fastq' is not a directory\n",
+      "\n",
+      "real\t0m0.528s\n",
+      "user\t0m0.000s\n",
+      "sys\t0m0.004s\n",
+      "ls: cannot access '/media/sam/data/coral_RNAseq_fastq': No such file or directory\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "time cp /home/sam/uw_drive/coral_rnaseq_2017/ucr_seq_output/illumina.bioinfo.ucr.edu/illumina_runs/web/ae55dd77f1828d82016e4e2ca1d93c6b70d261f3/*.gz \\\n",
+    "/mnt/data/sam/coral_RNAseq_fastq\n",
+    "ls -lh /media/sam/data/coral_RNAseq_fastq\n",
+    "cat ~/.default_subject.mail| msmtp \"$EMAIL\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "total 80G\n",
+      "-rwxrwxrwx 1 root root 1.3G Mar  6 15:57 4R041-L6-P01-AGTCAA-READ1-Sequences.txt.gz\n",
+      "-rwxrwxrwx 1 root root 1.4G Mar  6 15:58 4R041-L6-P01-AGTCAA-READ2-Sequences.txt.gz\n",
+      "-rwxrwxrwx 1 root root 1.7G Mar  6 15:59 4R041-L6-P02-CTTGTA-READ1-Sequences.txt.gz\n",
+      "-rwxrwxrwx 1 root root 1.9G Mar  6 16:01 4R041-L6-P02-CTTGTA-READ2-Sequences.txt.gz\n",
+      "-rwxrwxrwx 1 root root 1.2G Mar  6 16:01 4R041-L6-P03-GTTTCG-READ1-Sequences.txt.gz\n",
+      "-rwxrwxrwx 1 root root 1.4G Mar  6 16:02 4R041-L6-P03-GTTTCG-READ2-Sequences.txt.gz\n",
+      "-rwxrwxrwx 1 root root 1.3G Mar  6 16:03 4R041-L6-P04-ATCACG-READ1-Sequences.txt.gz\n",
+      "-rwxrwxrwx 1 root root 1.4G Mar  6 16:04 4R041-L6-P04-ATCACG-READ2-Sequences.txt.gz\n",
+      "-rwxrwxrwx 1 root root 1.7G Mar  6 16:05 4R041-L6-P05-TAGCTT-READ1-Sequences.txt.gz\n",
+      "-rwxrwxrwx 1 root root 2.0G Mar  6 16:06 4R041-L6-P05-TAGCTT-READ2-Sequences.txt.gz\n",
+      "-rwxrwxrwx 1 root root 2.0G Mar  6 16:07 4R041-L6-P06-AGTTCC-READ1-Sequences.txt.gz\n",
+      "-rwxrwxrwx 1 root root 2.3G Mar  6 16:15 4R041-L6-P06-AGTTCC-READ2-Sequences.txt.gz\n",
+      "-rwxrwxrwx 1 root root 1.5G Mar  6 16:15 4R041-L6-P07-ATGTCA-READ1-Sequences.txt.gz\n",
+      "-rwxrwxrwx 1 root root 1.7G Mar  6 16:19 4R041-L6-P07-ATGTCA-READ2-Sequences.txt.gz\n",
+      "-rwxrwxrwx 1 root root 2.1G Mar  6 16:21 4R041-L6-P08-ACTGAT-READ1-Sequences.txt.gz\n",
+      "-rwxrwxrwx 1 root root 2.4G Mar  6 16:27 4R041-L6-P08-ACTGAT-READ2-Sequences.txt.gz\n",
+      "-rwxrwxrwx 1 root root 1.7G Mar  6 16:29 4R041-L6-P09-GGCTAC-READ1-Sequences.txt.gz\n",
+      "-rwxrwxrwx 1 root root 2.0G Mar  6 16:30 4R041-L6-P09-GGCTAC-READ2-Sequences.txt.gz\n",
+      "-rwxrwxrwx 1 root root 793M Mar  6 16:31 4R041-L6-P10-GTCCGC-READ1-Sequences.txt.gz\n",
+      "-rwxrwxrwx 1 root root 915M Mar  6 16:31 4R041-L6-P10-GTCCGC-READ2-Sequences.txt.gz\n",
+      "-rwxrwxrwx 1 root root 2.2G Mar  6 16:33 4R041-L6-P11-GAGTGG-READ1-Sequences.txt.gz\n",
+      "-rwxrwxrwx 1 root root 2.4G Mar  6 16:34 4R041-L6-P11-GAGTGG-READ2-Sequences.txt.gz\n",
+      "-rwxrwxrwx 1 root root 2.2G Mar  6 16:35 4R041-L6-P12-GCCAAT-READ1-Sequences.txt.gz\n",
+      "-rwxrwxrwx 1 root root 2.4G Mar  6 16:42 4R041-L6-P12-GCCAAT-READ2-Sequences.txt.gz\n",
+      "-rwxrwxrwx 1 root root 144M Mar  6 16:42 4R041-L6-PrNotRecog-READ1-Sequences.txt.gz\n",
+      "-rwxrwxrwx 1 root root 163M Mar  6 16:42 4R041-L6-PrNotRecog-READ2-Sequences.txt.gz\n",
+      "-rwxrwxrwx 1 root root 1.3G Mar  6 16:43 4R041-L7-P01-AGTTCC-READ1-Sequences.txt.gz\n",
+      "-rwxrwxrwx 1 root root 1.4G Mar  6 16:43 4R041-L7-P01-AGTTCC-READ2-Sequences.txt.gz\n",
+      "-rwxrwxrwx 1 root root 1.2G Mar  6 16:44 4R041-L7-P02-ACAGTG-READ1-Sequences.txt.gz\n",
+      "-rwxrwxrwx 1 root root 1.4G Mar  6 16:45 4R041-L7-P02-ACAGTG-READ2-Sequences.txt.gz\n",
+      "-rwxrwxrwx 1 root root 1.2G Mar  6 16:46 4R041-L7-P03-ACTGAT-READ1-Sequences.txt.gz\n",
+      "-rwxrwxrwx 1 root root 1.3G Mar  6 16:47 4R041-L7-P03-ACTGAT-READ2-Sequences.txt.gz\n",
+      "-rwxrwxrwx 1 root root 849M Mar  6 16:47 4R041-L7-P04-GTCCGC-READ1-Sequences.txt.gz\n",
+      "-rwxrwxrwx 1 root root 1.3G Mar  6 16:48 4R041-L7-P05-GAGTGG-READ1-Sequences.txt.gz\n",
+      "-rwxrwxrwx 1 root root 1.5G Mar  6 16:49 4R041-L7-P05-GAGTGG-READ2-Sequences.txt.gz\n",
+      "-rwxrwxrwx 1 root root 920M Mar  6 16:49 4R041-L7-P06-GCCAAT-READ1-Sequences.txt.gz\n",
+      "-rwxrwxrwx 1 root root 1.1G Mar  6 16:51 4R041-L7-P06-GCCAAT-READ2-Sequences.txt.gz\n",
+      "-rwxrwxrwx 1 root root 1.3G Mar  6 16:52 4R041-L7-P07-AGTCAA-READ1-Sequences.txt.gz\n",
+      "-rwxrwxrwx 1 root root 1.5G Mar  6 16:53 4R041-L7-P07-AGTCAA-READ2-Sequences.txt.gz\n",
+      "-rwxrwxrwx 1 root root 1.4G Mar  6 16:53 4R041-L7-P08-CTTGTA-READ1-Sequences.txt.gz\n",
+      "-rwxrwxrwx 1 root root 1.6G Mar  6 16:54 4R041-L7-P08-CTTGTA-READ2-Sequences.txt.gz\n",
+      "-rwxrwxrwx 1 root root 1.2G Mar  6 16:55 4R041-L7-P09-GTGAAA-READ1-Sequences.txt.gz\n",
+      "-rwxrwxrwx 1 root root 1.3G Mar  6 16:55 4R041-L7-P09-GTGAAA-READ2-Sequences.txt.gz\n",
+      "-rwxrwxrwx 1 root root 1.7G Mar  6 16:56 4R041-L7-P10-TAGCTT-READ1-Sequences.txt.gz\n",
+      "-rwxrwxrwx 1 root root 1.9G Mar  6 16:58 4R041-L7-P10-TAGCTT-READ2-Sequences.txt.gz\n",
+      "-rwxrwxrwx 1 root root 1.1G Mar  6 16:58 4R041-L7-P11-ACTTGA-READ1-Sequences.txt.gz\n",
+      "-rwxrwxrwx 1 root root 1.3G Mar  6 16:59 4R041-L7-P11-ACTTGA-READ2-Sequences.txt.gz\n",
+      "-rwxrwxrwx 1 root root 1.4G Mar  6 17:03 4R041-L7-P12-TGACCA-READ1-Sequences.txt.gz\n",
+      "-rwxrwxrwx 1 root root 1.5G Mar  6 17:04 4R041-L7-P12-TGACCA-READ2-Sequences.txt.gz\n",
+      "-rwxrwxrwx 1 root root 917M Mar  6 17:05 4R041-L7-P13-ATCACG-READ1-Sequences.txt.gz\n",
+      "-rwxrwxrwx 1 root root 958M Mar  6 17:05 4R041-L7-P13-ATCACG-READ2-Sequences.txt.gz\n",
+      "-rwxrwxrwx 1 root root 1.6G Mar  6 17:06 4R041-L7-P14-GTGGCC-READ1-Sequences.txt.gz\n",
+      "-rwxrwxrwx 1 root root 1.8G Mar  6 17:07 4R041-L7-P14-GTGGCC-READ2-Sequences.txt.gz\n",
+      "-rwxrwxrwx 1 root root 1.7G Mar  6 17:09 4R041-L7-P15-GTTTCG-READ1-Sequences.txt.gz\n",
+      "-rwxrwxrwx 1 root root 2.0G Mar  6 17:10 4R041-L7-P15-GTTTCG-READ2-Sequences.txt.gz\n",
+      "-rwxrwxrwx 1 root root 136M Mar  6 17:10 4R041-L7-PrNotRecog-READ1-Sequences.txt.gz\n",
+      "-rwxrwxrwx 1 root root 152M Mar  6 17:10 4R041-L7-PrNotRecog-READ2-Sequences.txt.gz\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "real\t73m15.781s\n",
+      "user\t0m1.276s\n",
+      "sys\t3m13.944s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "time cp /home/sam/uw_drive/coral_rnaseq_2017/ucr_seq_output/illumina.bioinfo.ucr.edu/illumina_runs/web/ae55dd77f1828d82016e4e2ca1d93c6b70d261f3/*.gz \\\n",
+    "/mnt/data/coral_RNAseq_fastq\n",
+    "ls -lh /mnt/data/coral_RNAseq_fastq\n",
     "cat ~/.default_subject.mail| msmtp \"$EMAIL\""
    ]
   },
