finish moving data to external HDD

--- a/notebooks/20180311_trinity_montipora.ipynb
+++ b/notebooks/20180311_trinity_montipora.ipynb
@@ -141,9 +141,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Process is terminated.\n"
+     ]
+    }
+   ],
    "source": [
     "%%bash\n",
     "cd /mnt/data/coral_RNAseq_fastq/montipora/\n",
@@ -180,6 +188,246 @@
     "4R041-L6-P12-GCCAAT-READ2-Sequences.txt.gz \\\n",
     "4R041-L6-PrNotRecog-READ2-Sequences.txt.gz\n",
     "cat ~/.default_subject.mail| msmtp \"$EMAIL\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Gah! Command formatting is wrong! Reads need to be separated by commas, not spaces!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Thu Mar 15 07:26:56 PDT 2018\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "date"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4R041-L6-P01-AGTCAA-READ1-Sequences.txt.gz,4R041-L6-P02-CTTGTA-READ1-Sequences.txt.gz,4R041-L6-P03-GTTTCG-READ1-Sequences.txt.gz,4R041-L6-P04-ATCACG-READ1-Sequences.txt.gz,4R041-L6-P05-TAGCTT-READ1-Sequences.txt.gz,4R041-L6-P06-AGTTCC-READ1-Sequences.txt.gz,4R041-L6-P07-ATGTCA-READ1-Sequences.txt.gz,4R041-L6-P08-ACTGAT-READ1-Sequences.txt.gz,4R041-L6-P09-GGCTAC-READ1-Sequences.txt.gz,4R041-L6-P10-GTCCGC-READ1-Sequences.txt.gz,4R041-L6-P11-GAGTGG-READ1-Sequences.txt.gz,4R041-L6-P12-GCCAAT-READ1-Sequences.txt.gz,4R041-L6-PrNotRecog-READ1-Sequences.txt.gz,"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "cd /mnt/data/coral_RNAseq_fastq/montipora/\n",
+    "for fastq in *READ1*.gz\n",
+    "do\n",
+    "printf \"%s,\" \"$fastq\"\n",
+    "done"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4R041-L6-P01-AGTCAA-READ2-Sequences.txt.gz,4R041-L6-P02-CTTGTA-READ2-Sequences.txt.gz,4R041-L6-P03-GTTTCG-READ2-Sequences.txt.gz,4R041-L6-P04-ATCACG-READ2-Sequences.txt.gz,4R041-L6-P05-TAGCTT-READ2-Sequences.txt.gz,4R041-L6-P06-AGTTCC-READ2-Sequences.txt.gz,4R041-L6-P07-ATGTCA-READ2-Sequences.txt.gz,4R041-L6-P08-ACTGAT-READ2-Sequences.txt.gz,4R041-L6-P09-GGCTAC-READ2-Sequences.txt.gz,4R041-L6-P10-GTCCGC-READ2-Sequences.txt.gz,4R041-L6-P11-GAGTGG-READ2-Sequences.txt.gz,4R041-L6-P12-GCCAAT-READ2-Sequences.txt.gz,4R041-L6-PrNotRecog-READ2-Sequences.txt.gz,"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "cd /mnt/data/coral_RNAseq_fastq/montipora/\n",
+    "for fastq in *READ2*.gz\n",
+    "do\n",
+    "printf \"%s,\" \"$fastq\"\n",
+    "done"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "IOPub data rate exceeded.\n",
+      "The notebook server will temporarily stop sending output\n",
+      "to the client in order to avoid crashing it.\n",
+      "To change this limit, set the config variable\n",
+      "`--NotebookApp.iopub_data_rate_limit`.\n",
+      "\n",
+      "Current values:\n",
+      "NotebookApp.iopub_data_rate_limit=1000000.0 (bytes/sec)\n",
+      "NotebookApp.rate_limit_window=3.0 (secs)\n",
+      "\n",
+      "\n",
+      "real\t5593m48.613s\n",
+      "user\t42327m18.060s\n",
+      "sys\t12174m25.544s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "cd /mnt/data/coral_RNAseq_fastq/montipora/\n",
+    "time  /home/shared/trinityrnaseq-Trinity-v2.6.5/Trinity \\\n",
+    "--seqType fq \\\n",
+    "--max_memory 90G \\\n",
+    "--CPU 24 \\\n",
+    "--left \\\n",
+    "4R041-L6-P01-AGTCAA-READ1-Sequences.txt.gz,\\\n",
+    "4R041-L6-P02-CTTGTA-READ1-Sequences.txt.gz,\\\n",
+    "4R041-L6-P03-GTTTCG-READ1-Sequences.txt.gz,\\\n",
+    "4R041-L6-P04-ATCACG-READ1-Sequences.txt.gz,\\\n",
+    "4R041-L6-P05-TAGCTT-READ1-Sequences.txt.gz,\\\n",
+    "4R041-L6-P06-AGTTCC-READ1-Sequences.txt.gz,\\\n",
+    "4R041-L6-P07-ATGTCA-READ1-Sequences.txt.gz,\\\n",
+    "4R041-L6-P08-ACTGAT-READ1-Sequences.txt.gz,\\\n",
+    "4R041-L6-P09-GGCTAC-READ1-Sequences.txt.gz,\\\n",
+    "4R041-L6-P10-GTCCGC-READ1-Sequences.txt.gz,\\\n",
+    "4R041-L6-P11-GAGTGG-READ1-Sequences.txt.gz,\\\n",
+    "4R041-L6-P12-GCCAAT-READ1-Sequences.txt.gz,\\\n",
+    "4R041-L6-PrNotRecog-READ1-Sequences.txt.gz \\\n",
+    "--right \\\n",
+    "4R041-L6-P01-AGTCAA-READ2-Sequences.txt.gz,\\\n",
+    "4R041-L6-P02-CTTGTA-READ2-Sequences.txt.gz,\\\n",
+    "4R041-L6-P03-GTTTCG-READ2-Sequences.txt.gz,\\\n",
+    "4R041-L6-P04-ATCACG-READ2-Sequences.txt.gz,\\\n",
+    "4R041-L6-P05-TAGCTT-READ2-Sequences.txt.gz,\\\n",
+    "4R041-L6-P06-AGTTCC-READ2-Sequences.txt.gz,\\\n",
+    "4R041-L6-P07-ATGTCA-READ2-Sequences.txt.gz,\\\n",
+    "4R041-L6-P08-ACTGAT-READ2-Sequences.txt.gz,\\\n",
+    "4R041-L6-P09-GGCTAC-READ2-Sequences.txt.gz,\\\n",
+    "4R041-L6-P10-GTCCGC-READ2-Sequences.txt.gz,\\\n",
+    "4R041-L6-P11-GAGTGG-READ2-Sequences.txt.gz,\\\n",
+    "4R041-L6-P12-GCCAAT-READ2-Sequences.txt.gz,\\\n",
+    "4R041-L6-PrNotRecog-READ2-Sequences.txt.gz\n",
+    "cat ~/.default_subject.mail| msmtp \"$EMAIL\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Had to restart computer to deal with connection of new, external HDD."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "mv: cannot create directory '/media/sam/4TB_toshiba/montipora': Permission denied\n",
+      "\n",
+      "real\t0m0.002s\n",
+      "user\t0m0.000s\n",
+      "sys\t0m0.000s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "time mv /mnt/data/coral_RNAseq_fastq/montipora/ /media/sam/4TB_toshiba/\n",
+    "cat ~/.default_subject.mail| msmtp \"$EMAIL\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Had to change permissions outside of notebook due to required use of ```sudo```."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "real\t401m59.610s\n",
+      "user\t2m6.684s\n",
+      "sys\t25m13.724s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "time mv /mnt/data/coral_RNAseq_fastq/montipora/ /media/sam/4TB_toshiba/\n",
+    "cat ~/.default_subject.mail| msmtp \"$EMAIL\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Verify freespace on HDD to allow starting Porites assembly."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Filesystem      Size  Used Avail Use% Mounted on\n",
+      "udev             48G     0   48G   0% /dev\n",
+      "tmpfs           9.5G   34M  9.5G   1% /run\n",
+      "/dev/sda3       107G   15G   87G  14% /\n",
+      "tmpfs            48G   51M   48G   1% /dev/shm\n",
+      "tmpfs           5.0M  4.0K  5.0M   1% /run/lock\n",
+      "tmpfs            48G     0   48G   0% /sys/fs/cgroup\n",
+      "/dev/loop0       82M   82M     0 100% /snap/core/4110\n",
+      "/dev/loop1       82M   82M     0 100% /snap/core/4206\n",
+      "/dev/loop2      131M  131M     0 100% /snap/atom/132\n",
+      "/dev/loop3       82M   82M     0 100% /snap/core/4017\n",
+      "/dev/loop5      175M  175M     0 100% /snap/atom/129\n",
+      "/dev/loop4      175M  175M     0 100% /snap/atom/116\n",
+      "cgmfs           100K     0  100K   0% /run/cgmanager/fs\n",
+      "/dev/sdb1       932G   46G  886G   5% /mnt/data\n",
+      "tmpfs           9.5G   84K  9.5G   1% /run/user/1000\n",
+      "/dev/sdc1       3.6T  768G  2.7T  23% /media/sam/4TB_toshiba\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "df -h"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```/dev/sdb1``` is the drive we'll be using. Looks good!"
    ]
   },
   {
