incomplete assembly? initiate re-run.

--- a/notebooks/20180311_trinity_montipora.ipynb
+++ b/notebooks/20180311_trinity_montipora.ipynb
@@ -431,11 +431,174 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I'm a bit concered that I can't view the Trinity log, due to the Jupyter Notebook not being able to handle the IO stuff. There should be a file called ```Trinity.fasta``` in the output folder if the assembly was successful. Let's check it out."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "total 121457720\n",
+      "-rwxrwxrwx 1 sam sam 18047189338 Mar 15 15:45 both.fa\n",
+      "-rwxrwxrwx 1 sam sam           0 Mar 15 15:45 both.fa.ok\n",
+      "-rwxrwxrwx 1 sam sam          10 Mar 15 15:46 both.fa.read_count\n",
+      "drwxrwxrwx 2 sam sam        4096 Mar 16 01:14 chrysalis\n",
+      "-rwxrwxrwx 1 sam sam    19463230 Mar 19 04:45 FailedCommands\n",
+      "-rwxrwxrwx 1 sam sam  1171665873 Mar 15 18:38 inchworm.K25.L25.DS.fa\n",
+      "-rwxrwxrwx 1 sam sam           0 Mar 15 18:44 inchworm.K25.L25.DS.fa.finished\n",
+      "-rwxrwxrwx 1 sam sam          11 Mar 15 17:02 inchworm.kmer_count\n",
+      "drwxrwxrwx 2 sam sam        4096 Mar 15 15:35 insilico_read_normalization\n",
+      "-rwxrwxrwx 1 sam sam 38580110632 Mar 15 16:10 jellyfish.kmers.fa\n",
+      "-rwxrwxrwx 1 sam sam       27529 Mar 15 16:12 jellyfish.kmers.fa.histo\n",
+      "-rwxrwxrwx 1 sam sam           0 Mar 15 15:42 left.fa.ok\n",
+      "-rwxrwxrwx 1 sam sam    24767098 Mar 16 01:30 partitioned_reads.files.list\n",
+      "-rwxrwxrwx 1 sam sam           0 Mar 16 01:30 partitioned_reads.files.list.ok\n",
+      "-rwxrwxrwx 1 sam sam        1733 Mar 16 01:07 pipeliner.3221.cmds\n",
+      "drwxrwxrwx 5 sam sam        4096 Mar 16 01:29 read_partitions\n",
+      "-rwxrwxrwx 1 sam sam    92758772 Mar 16 01:30 recursive_trinity.cmds\n",
+      "-rwxrwxrwx 1 sam sam    73295542 Mar 19 04:42 recursive_trinity.cmds.completed\n",
+      "-rwxrwxrwx 1 sam sam           0 Mar 16 01:30 recursive_trinity.cmds.ok\n",
+      "-rwxrwxrwx 1 sam sam           0 Mar 15 15:42 right.fa.ok\n",
+      "-rwxrwxrwx 1 sam sam 66363306365 Mar 15 21:49 scaffolding_entries.sam\n",
+      "-rwxrwxrwx 1 sam sam        1281 Mar 15 07:31 Trinity.timing\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "ls -l /media/sam/4TB_toshiba/montipora/trinity_out_dir/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Well, it's not there! This is not good, particularly since I can't refer to the stderr/stdout! I guess I'll have to re-run this to figure out what went wrong. :("
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mon Apr  2 15:56:18 PDT 2018\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "date"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-6-dcd6ca353770>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-6-dcd6ca353770>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    cd /mnt/data/coral_RNAseq_fastq/montipora/\u001b[0m\n\u001b[0m                                              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "cd /mnt/data/coral_RNAseq_fastq/montipora/\n",
+    "time  /home/shared/trinityrnaseq-Trinity-v2.6.5/Trinity \\\n",
+    "--output /media/sam/4TB_toshiba/montipora/20180402_trinity \\\n",
+    "--seqType fq \\\n",
+    "--max_memory 90G \\\n",
+    "--CPU 24 \\\n",
+    "--left \\\n",
+    "4R041-L6-P01-AGTCAA-READ1-Sequences.txt.gz,\\\n",
+    "4R041-L6-P02-CTTGTA-READ1-Sequences.txt.gz,\\\n",
+    "4R041-L6-P03-GTTTCG-READ1-Sequences.txt.gz,\\\n",
+    "4R041-L6-P04-ATCACG-READ1-Sequences.txt.gz,\\\n",
+    "4R041-L6-P05-TAGCTT-READ1-Sequences.txt.gz,\\\n",
+    "4R041-L6-P06-AGTTCC-READ1-Sequences.txt.gz,\\\n",
+    "4R041-L6-P07-ATGTCA-READ1-Sequences.txt.gz,\\\n",
+    "4R041-L6-P08-ACTGAT-READ1-Sequences.txt.gz,\\\n",
+    "4R041-L6-P09-GGCTAC-READ1-Sequences.txt.gz,\\\n",
+    "4R041-L6-P10-GTCCGC-READ1-Sequences.txt.gz,\\\n",
+    "4R041-L6-P11-GAGTGG-READ1-Sequences.txt.gz,\\\n",
+    "4R041-L6-P12-GCCAAT-READ1-Sequences.txt.gz,\\\n",
+    "4R041-L6-PrNotRecog-READ1-Sequences.txt.gz \\\n",
+    "--right \\\n",
+    "4R041-L6-P01-AGTCAA-READ2-Sequences.txt.gz,\\\n",
+    "4R041-L6-P02-CTTGTA-READ2-Sequences.txt.gz,\\\n",
+    "4R041-L6-P03-GTTTCG-READ2-Sequences.txt.gz,\\\n",
+    "4R041-L6-P04-ATCACG-READ2-Sequences.txt.gz,\\\n",
+    "4R041-L6-P05-TAGCTT-READ2-Sequences.txt.gz,\\\n",
+    "4R041-L6-P06-AGTTCC-READ2-Sequences.txt.gz,\\\n",
+    "4R041-L6-P07-ATGTCA-READ2-Sequences.txt.gz,\\\n",
+    "4R041-L6-P08-ACTGAT-READ2-Sequences.txt.gz,\\\n",
+    "4R041-L6-P09-GGCTAC-READ2-Sequences.txt.gz,\\\n",
+    "4R041-L6-P10-GTCCGC-READ2-Sequences.txt.gz,\\\n",
+    "4R041-L6-P11-GAGTGG-READ2-Sequences.txt.gz,\\\n",
+    "4R041-L6-P12-GCCAAT-READ2-Sequences.txt.gz,\\\n",
+    "4R041-L6-PrNotRecog-READ2-Sequences.txt.gz \\\n",
+    "> run.log 2>&1 &\n",
+    "cat ~/.default_subject.mail| msmtp \"$EMAIL\""
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "%%bash\n",
+    "cd /mnt/data/coral_RNAseq_fastq/montipora/\n",
+    "time  /home/shared/trinityrnaseq-Trinity-v2.6.5/Trinity \\\n",
+    "--output /media/sam/4TB_toshiba/montipora/20180402_trinity \\\n",
+    "--seqType fq \\\n",
+    "--max_memory 90G \\\n",
+    "--CPU 24 \\\n",
+    "--left \\\n",
+    "4R041-L6-P01-AGTCAA-READ1-Sequences.txt.gz,\\\n",
+    "4R041-L6-P02-CTTGTA-READ1-Sequences.txt.gz,\\\n",
+    "4R041-L6-P03-GTTTCG-READ1-Sequences.txt.gz,\\\n",
+    "4R041-L6-P04-ATCACG-READ1-Sequences.txt.gz,\\\n",
+    "4R041-L6-P05-TAGCTT-READ1-Sequences.txt.gz,\\\n",
+    "4R041-L6-P06-AGTTCC-READ1-Sequences.txt.gz,\\\n",
+    "4R041-L6-P07-ATGTCA-READ1-Sequences.txt.gz,\\\n",
+    "4R041-L6-P08-ACTGAT-READ1-Sequences.txt.gz,\\\n",
+    "4R041-L6-P09-GGCTAC-READ1-Sequences.txt.gz,\\\n",
+    "4R041-L6-P10-GTCCGC-READ1-Sequences.txt.gz,\\\n",
+    "4R041-L6-P11-GAGTGG-READ1-Sequences.txt.gz,\\\n",
+    "4R041-L6-P12-GCCAAT-READ1-Sequences.txt.gz,\\\n",
+    "4R041-L6-PrNotRecog-READ1-Sequences.txt.gz \\\n",
+    "--right \\\n",
+    "4R041-L6-P01-AGTCAA-READ2-Sequences.txt.gz,\\\n",
+    "4R041-L6-P02-CTTGTA-READ2-Sequences.txt.gz,\\\n",
+    "4R041-L6-P03-GTTTCG-READ2-Sequences.txt.gz,\\\n",
+    "4R041-L6-P04-ATCACG-READ2-Sequences.txt.gz,\\\n",
+    "4R041-L6-P05-TAGCTT-READ2-Sequences.txt.gz,\\\n",
+    "4R041-L6-P06-AGTTCC-READ2-Sequences.txt.gz,\\\n",
+    "4R041-L6-P07-ATGTCA-READ2-Sequences.txt.gz,\\\n",
+    "4R041-L6-P08-ACTGAT-READ2-Sequences.txt.gz,\\\n",
+    "4R041-L6-P09-GGCTAC-READ2-Sequences.txt.gz,\\\n",
+    "4R041-L6-P10-GTCCGC-READ2-Sequences.txt.gz,\\\n",
+    "4R041-L6-P11-GAGTGG-READ2-Sequences.txt.gz,\\\n",
+    "4R041-L6-P12-GCCAAT-READ2-Sequences.txt.gz,\\\n",
+    "4R041-L6-PrNotRecog-READ2-Sequences.txt.gz \\\n",
+    "> run.log 2>&1 &\n",
+    "cat ~/.default_subject.mail| msmtp \"$EMAIL\""
+   ]
   }
  ],
  "metadata": {
