fix input file location

--- a/notebooks/20180311_trinity_montipora.ipynb
+++ b/notebooks/20180311_trinity_montipora.ipynb
@@ -557,9 +557,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "bash: line 1: cd: /mnt/data/coral_RNAseq_fastq/montipora/: No such file or directory\n",
+      "\n",
+      "real\t0m10.501s\n",
+      "user\t0m0.316s\n",
+      "sys\t0m0.112s\n"
+     ]
+    }
+   ],
    "source": [
     "%%bash\n",
     "cd /mnt/data/coral_RNAseq_fastq/montipora/\n",
@@ -597,6 +609,51 @@
     "4R041-L6-P12-GCCAAT-READ2-Sequences.txt.gz,\\\n",
     "4R041-L6-PrNotRecog-READ2-Sequences.txt.gz \\\n",
     "> run.log 2>&1 &\n",
+    "cat ~/.default_subject.mail| msmtp \"$EMAIL\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "cd /media/sam/4TB_toshiba/montipora/\n",
+    "time  /home/shared/trinityrnaseq-Trinity-v2.6.5/Trinity \\\n",
+    "--output /media/sam/4TB_toshiba/montipora/20180402_trinity \\\n",
+    "--seqType fq \\\n",
+    "--max_memory 90G \\\n",
+    "--CPU 24 \\\n",
+    "--left \\\n",
+    "4R041-L6-P01-AGTCAA-READ1-Sequences.txt.gz,\\\n",
+    "4R041-L6-P02-CTTGTA-READ1-Sequences.txt.gz,\\\n",
+    "4R041-L6-P03-GTTTCG-READ1-Sequences.txt.gz,\\\n",
+    "4R041-L6-P04-ATCACG-READ1-Sequences.txt.gz,\\\n",
+    "4R041-L6-P05-TAGCTT-READ1-Sequences.txt.gz,\\\n",
+    "4R041-L6-P06-AGTTCC-READ1-Sequences.txt.gz,\\\n",
+    "4R041-L6-P07-ATGTCA-READ1-Sequences.txt.gz,\\\n",
+    "4R041-L6-P08-ACTGAT-READ1-Sequences.txt.gz,\\\n",
+    "4R041-L6-P09-GGCTAC-READ1-Sequences.txt.gz,\\\n",
+    "4R041-L6-P10-GTCCGC-READ1-Sequences.txt.gz,\\\n",
+    "4R041-L6-P11-GAGTGG-READ1-Sequences.txt.gz,\\\n",
+    "4R041-L6-P12-GCCAAT-READ1-Sequences.txt.gz,\\\n",
+    "4R041-L6-PrNotRecog-READ1-Sequences.txt.gz \\\n",
+    "--right \\\n",
+    "4R041-L6-P01-AGTCAA-READ2-Sequences.txt.gz,\\\n",
+    "4R041-L6-P02-CTTGTA-READ2-Sequences.txt.gz,\\\n",
+    "4R041-L6-P03-GTTTCG-READ2-Sequences.txt.gz,\\\n",
+    "4R041-L6-P04-ATCACG-READ2-Sequences.txt.gz,\\\n",
+    "4R041-L6-P05-TAGCTT-READ2-Sequences.txt.gz,\\\n",
+    "4R041-L6-P06-AGTTCC-READ2-Sequences.txt.gz,\\\n",
+    "4R041-L6-P07-ATGTCA-READ2-Sequences.txt.gz,\\\n",
+    "4R041-L6-P08-ACTGAT-READ2-Sequences.txt.gz,\\\n",
+    "4R041-L6-P09-GGCTAC-READ2-Sequences.txt.gz,\\\n",
+    "4R041-L6-P10-GTCCGC-READ2-Sequences.txt.gz,\\\n",
+    "4R041-L6-P11-GAGTGG-READ2-Sequences.txt.gz,\\\n",
+    "4R041-L6-P12-GCCAAT-READ2-Sequences.txt.gz,\\\n",
+    "4R041-L6-PrNotRecog-READ2-Sequences.txt.gz \\\n",
+    "> /media/sam/4TB_toshiba/montipora/20180402_trinityrun.log 2>&1\n",
     "cat ~/.default_subject.mail| msmtp \"$EMAIL\""
    ]
   }
