--- a/notebooks/20180322_trinity_porites.ipynb
+++ b/notebooks/20180322_trinity_porites.ipynb
@@ -24432,6 +24432,160 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Although this appears to have completed successfully, I'm a bit concerned, as the computer produced a low storage space warning.\n",
+    "\n",
+    "Additionally, the Jupyter Notebook was incapable of displaying the full output from Trinity. That means, I can't view the run logs."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Filesystem              Size  Used Avail Use% Mounted on\n",
+      "udev                     48G     0   48G   0% /dev\n",
+      "tmpfs                   9.5G  418M  9.1G   5% /run\n",
+      "/dev/sda3               107G   16G   86G  16% /\n",
+      "tmpfs                    48G   40M   48G   1% /dev/shm\n",
+      "tmpfs                   5.0M  4.0K  5.0M   1% /run/lock\n",
+      "tmpfs                    48G     0   48G   0% /sys/fs/cgroup\n",
+      "/dev/loop0               82M   82M     0 100% /snap/core/4110\n",
+      "/dev/loop1               82M   82M     0 100% /snap/core/4206\n",
+      "/dev/loop2              131M  131M     0 100% /snap/atom/132\n",
+      "/dev/loop3               82M   82M     0 100% /snap/core/4017\n",
+      "cgmfs                   100K     0  100K   0% /run/cgmanager/fs\n",
+      "/dev/sdb1               932G  932G     0 100% /mnt/data\n",
+      "tmpfs                   9.5G  112K  9.5G   1% /run/user/1000\n",
+      "/dev/sdc1               3.6T  768G  2.7T  23% /media/sam/4TB_toshiba\n",
+      "/dev/loop6              139M  139M     0 100% /snap/atom/136\n",
+      "google-drive-ocamlfuse  8.0E   28T  8.0E   1% /home/sam/uw_drive\n",
+      "/dev/loop4              139M  139M     0 100% /snap/atom/141\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "df -h"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Well, ```/dev/sdb1``` is the drive this was executed on and shows 0% available space...\n",
+    "\n",
+    "Additionally, we expect a file called ```Trinity.fasta```  as the output. Let's see if it's there..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "total 118133438\n",
+      "-rwxrwxrwx 1 root root 16979748198 Mar 23 00:12 both.fa\n",
+      "-rwxrwxrwx 1 root root           0 Mar 23 00:12 both.fa.ok\n",
+      "-rwxrwxrwx 1 root root          10 Mar 23 00:12 both.fa.read_count\n",
+      "drwxrwxrwx 1 root root       24576 Mar 23 09:48 chrysalis\n",
+      "-rwxrwxrwx 1 root root         820 Mar 30 18:26 FailedCommands\n",
+      "-rwxrwxrwx 1 root root  1270813069 Mar 23 02:39 inchworm.K25.L25.DS.fa\n",
+      "-rwxrwxrwx 1 root root           0 Mar 23 02:44 inchworm.K25.L25.DS.fa.finished\n",
+      "-rwxrwxrwx 1 root root          11 Mar 23 01:15 inchworm.kmer_count\n",
+      "drwxrwxrwx 1 root root        4096 Mar 23 00:01 insilico_read_normalization\n",
+      "-rwxrwxrwx 1 root root 35173836567 Mar 23 00:36 jellyfish.kmers.fa\n",
+      "-rwxrwxrwx 1 root root       23412 Mar 23 00:37 jellyfish.kmers.fa.histo\n",
+      "-rwxrwxrwx 1 root root           0 Mar 23 00:08 left.fa.ok\n",
+      "-rwxrwxrwx 1 root root    27269979 Mar 23 10:05 partitioned_reads.files.list\n",
+      "-rwxrwxrwx 1 root root           0 Mar 23 10:05 partitioned_reads.files.list.ok\n",
+      "-rwxrwxrwx 1 root root        1705 Mar 23 09:43 pipeliner.18198.cmds\n",
+      "drwxrwxrwx 1 root root           0 Mar 23 10:03 read_partitions\n",
+      "-rwxrwxrwx 1 root root   102966390 Mar 23 10:05 recursive_trinity.cmds\n",
+      "-rwxrwxrwx 1 root root    46402126 Mar 25 12:25 recursive_trinity.cmds.completed\n",
+      "-rwxrwxrwx 1 root root           0 Mar 23 10:05 recursive_trinity.cmds.ok\n",
+      "-rwxrwxrwx 1 root root           0 Mar 23 00:08 right.fa.ok\n",
+      "-rwxrwxrwx 1 root root 67367526130 Mar 23 06:18 scaffolding_entries.sam\n",
+      "-rwxrwxrwx 1 root root        1539 Mar 22 21:39 Trinity.timing\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "ls -l /mnt/data/coral_RNAseq_fastq/porites/trinity_out_dir/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ugh. I'm going to have to re-run this and use the external HDD. So, with that, I clean this up, restart the assembly job on the 4TB external, and be sure to redirect stderr/stdout to a log file."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "ls: cannot access '/mnt/data/coral_RNAseq_fastq/porites/trinity_out_dir/': No such file or directory\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "rm -rf /mnt/data/coral_RNAseq_fastq/porites/trinity_out_dir/\n",
+    "ls -l /mnt/data/coral_RNAseq_fastq/porites/trinity_out_dir/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Filesystem              Size  Used Avail Use% Mounted on\n",
+      "udev                     48G     0   48G   0% /dev\n",
+      "tmpfs                   9.5G  418M  9.1G   5% /run\n",
+      "/dev/sda3               107G   16G   86G  16% /\n",
+      "tmpfs                    48G   40M   48G   1% /dev/shm\n",
+      "tmpfs                   5.0M  4.0K  5.0M   1% /run/lock\n",
+      "tmpfs                    48G     0   48G   0% /sys/fs/cgroup\n",
+      "/dev/loop0               82M   82M     0 100% /snap/core/4110\n",
+      "/dev/loop1               82M   82M     0 100% /snap/core/4206\n",
+      "/dev/loop2              131M  131M     0 100% /snap/atom/132\n",
+      "/dev/loop3               82M   82M     0 100% /snap/core/4017\n",
+      "cgmfs                   100K     0  100K   0% /run/cgmanager/fs\n",
+      "/dev/sdb1               932G   46G  886G   5% /mnt/data\n",
+      "tmpfs                   9.5G  112K  9.5G   1% /run/user/1000\n",
+      "/dev/sdc1               3.6T  768G  2.7T  23% /media/sam/4TB_toshiba\n",
+      "/dev/loop6              139M  139M     0 100% /snap/atom/136\n",
+      "google-drive-ocamlfuse  8.0E   28T  8.0E   1% /home/sam/uw_drive\n",
+      "/dev/loop4              139M  139M     0 100% /snap/atom/141\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "df -h"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
