--- a/notebooks/20180808_rsem_abundance_porites.ipynb
+++ b/notebooks/20180808_rsem_abundance_porites.ipynb
@@ -97,9 +97,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/games:/usr/local/games:/home/shared/samtools-1.7:/home/shared/bowtie2-2.3.4.1-linux-x86_64:/home/shared/FastQC:/home/shared/jellyfish-2.2.9/bin:/home/shared/salmon_0.9.1/bin:/home/shared/samtools-1.7:/home/shared/TrimGalore-0.4.5:/home/shared/Trinityrnaseq-v2.6.6:/home/shared/ncbi-blast-2.7.1+/bin:/home/shared/RSEM-1.3.1\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "real\t3109m47.577s\n",
+      "user\t18083m5.612s\n",
+      "sys\t8807m28.936s\n"
+     ]
+    }
+   ],
    "source": [
     "%%bash\n",
     "source /etc/environment\n",
@@ -151,6 +169,33 @@
     "1> /media/sam/4TB_toshiba/porites/20180808_rsem/20180808_rsem.out \\\n",
     "2> /media/sam/4TB_toshiba/porites/20180808_rsem/20180808_rsem.err\n",
     "sed '/^Subject:/ s/ / porites_rsem JOB COMPLETE/' ~/.default-subject.mail | msmtp \"$EMAIL\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "total 152G\n",
+      "-rw-rw-r-- 1 sam sam  76G Aug  9 03:14 bowtie2.bam\n",
+      "-rw-rw-r-- 1 sam sam    0 Aug  9 03:14 bowtie2.bam.ok\n",
+      "-rw-rw-r-- 1 sam sam  76G Aug  9 17:41 bowtie2.bam.for_rsem.bam\n",
+      "drwxrwxr-x 2 sam sam 4.0K Aug 10 12:15 RSEM.stat\n",
+      "-rw-rw-r-- 1 sam sam  68M Aug 10 12:15 RSEM.isoforms.results\n",
+      "-rw-rw-r-- 1 sam sam  47M Aug 10 12:15 RSEM.genes.results\n",
+      "-rw-rw-r-- 1 sam sam 314K Aug 10 12:15 20180808_rsem.out\n",
+      "-rw-rw-r-- 1 sam sam 6.5M Aug 10 12:15 20180808_rsem.err\n",
+      "-rw-rw-r-- 1 sam sam    0 Aug 10 12:15 RSEM.isoforms.results.ok\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "ls -ltrh /media/sam/4TB_toshiba/porites/20180808_rsem"
    ]
   },
   {
